[package]
name = "eztrans-rs"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[features]
default = []
encoding = ["encoding_rs"]

[dependencies]
libloading = "0.5.0"
encoding_rs = { version = "0.8.17", optional = true, features = ["simd-accel", "fast-legacy-encode"] }
libc = "0.2.65"

